# auto

./: .envrc.sample  .gitignore  README.md  pyproject.toml
examples/: great_expectations_validate_csv.py
interface/: AutoGradioBlocks.py  AutoGradioInterface.py
notebooks/: explore_nshot.ipynb  gradio-explore.ipynb  langchain-explore.ipynb
pipelines/: AutoGradioBlocks.py  AutoGradioInterface.py  ComponentGen.py  PipelineGen.py  example_prompt.py  prompt.py  prompts.py
prompts/: component.py  pipeline.py
